# Mind-the-School

./: .android.json  .bashrc  .claude.md  .cursorignore  .gitignore  .renpy-sdk  LICENSE  Mind your School.docx  Plans.xlsm  Plans.xlsx  README.md  StudioNeo Save.ahk  VisualStudioCodeInsider.edit.py  VisualStudioCodeInsiderCDIC.edit.py  VisualStudioCodeInsiderCrenPC.edit.py  android.json  android.keystore  bundle.keystore  credits.docx  cspell.json  desktop.ini  errors-Cren-PC.txt  errors-cdic.txt  errors.txt  icon.icns  lint_out.txt  log-Cren-PC.txt  log-CrenPC.txt  log-cdic-2.txt  log-cdic-3.txt  log-cdic-4.txt  log-cdic.txt  log.txt  project.json  traceback-CrenPC.txt  traceback-cdic.txt  traceback.txt
.claude/: settings.json
.cspell/: custom-dictionary-workspace.txt  custom_names.txt
.cursor/: mcp.json
.github/: FUNDING.yml
Image Converter/: MIGRATION_PLAN.md  backup_images.bat  backup_images.py  img_diff.py  nc.txt  nchelp.txt
Members/: github_refine_members.py  refine_members.py  update_members.bat
docs/: Doxyfile  convert_renpy.py  generate_docs.bat
event backup/: event high_school_building.txt  event high_school_dormitory.txt
game/: cheat_patch.rpy  cheat_patch.rpyc  cheats.rpyc  classes_patch.rpy  classes_patch.rpyc  gui.rpy  gui.rpyc  loli_filter  loli_patch.rpyc  members copy.csv  members.csv  members_copy.csv  message.txt  options.rpy  options.rpyc  patch.rpy  screens.rpy  (+6 more)
mcp-server/: pyproject.toml
mcp-server/src/mts_mcp/: __init__.py  __main__.py  config.py  files.py  server.py
mcp-server/src/mts_mcp/handlers/: __init__.py  logs.py
(+439 files in other folders)
