[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mts-mcp"
version = "0.1.0"
description = "MCP server for Mind the School (Ren'Py) — game logs and future dev tools"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "mcp>=1.2.0",
  "pydantic-settings>=2.0.0",
]

[project.scripts]
mts-mcp = "mts_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
